created courses app and returns serialized data

--- a/Blogs_project/Blogs_app/templates/django_recaptcha/widget_v2_checkbox.html
+++ b/Blogs_project/Blogs_app/templates/django_recaptcha/widget_v2_checkbox.html
@@ -1,2 +1,2 @@
 <input type="checkbox" name="g-recaptcha-response" id="id_recaptcha">
-<label for="id_recaptcha">I’m not a robot (test only)</label>
+<label for="id_recaptcha">I’m not a robot</label>   
